--- a/eats-application/pom.xml
+++ b/eats-application/pom.xml
@@ -29,16 +29,16 @@
 			<artifactId>eats-pedido</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>br.com.caelum</groupId>
-			<artifactId>eats-pagamento</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>br.com.caelum</groupId>
-			<artifactId>eats-distancia</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>br.com.caelum</groupId> -->
+<!-- 			<artifactId>eats-pagamento</artifactId> -->
+<!-- 			<version>${project.version}</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>br.com.caelum</groupId> -->
+<!-- 			<artifactId>eats-distancia</artifactId> -->
+<!-- 			<version>${project.version}</version> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
