--- a/eats-application/src/main/resources/application.properties
+++ b/eats-application/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #DATASOURCE CONFIGS
-spring.datasource.url=jdbc:mysql://localhost/eats?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3308/eats?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 
 #JPA CONFIGS
 spring.jpa.hibernate.ddl-auto=validate
@@ -14,3 +14,5 @@ jwt.expiration = 604800000
 spring.jackson.serialization.fail-on-empty-beans=false
 
 spring.devtools.restart.additional-paths=../
+
+configuracao.distancia.service.url=http://localhost:8082
